# Passlock

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  api_server.go  build.rs  deny.toml  go.mod  web_server.go
.cargo/: audit.toml
.github/workflows/: c.yml  ci.yml  code-quality.yml  go.yml  integration.yml  release.yml  rust.yml
c_src/: crypto_core.c
go_src/: api_server.go
src/: crypto.rs  main.rs  models.rs  storage.rs  ui.rs  vault_ffi.rs
src/c/: crypto_core.c  crypto_core.h  sodium_wrapper.h  vault_engine.c  vault_engine.h
src/ui/: app.rs  colors.rs  handlers.rs  mod.rs  screens.rs
src/ui/widgets/: menu.rs  mod.rs  passwords.rs  utility.rs  vault.rs
web/: index.html
