[package]
name = "passlock"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
clearscreen = "2.0"
colored = "2.0"
rpassword = "7.3"
dirs = "5.0"
libc = "0.2"
ratatui = "0.26"
crossterm = "0.27"
hex = "0.4"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true